--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -20,7 +20,7 @@
                     </button>
                 <div id='dropdown-menu' class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item text-secondary" href="/slogin">Student Login</a><hr>
-                        <a class="dropdown-item text-secondary" href="#">Teacher login</a><hr>
+                        <a class="dropdown-item text-secondary" href="/tlogin">Teacher login</a><hr>
                         <a class="dropdown-item text-secondary" href="#">Parent Login</a>
 
             </li>
