--- a/views/slogin.hbs
+++ b/views/slogin.hbs
@@ -1,1 +1,50 @@
 <h1>Student login</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Login page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/util.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+
+<div class="limiter">
+    <div class="container-login100">
+        <div class="wrap-login100 p-t-85 p-b-20">
+            <form class="login100-form validate-form">
+					<span class="login100-form-title p-b-70">
+						Student Login
+					</span>
+                <span class="login100-form-avatar">
+						<img src="images/key.JPG" alt="AVATAR">
+					</span>
+
+                <div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate = "Enter username">
+                    <input class="input100" type="text" name="username">
+                    <span class="focus-input100" data-placeholder="Username"></span>
+                </div>
+
+                <div class="wrap-input100 validate-input m-b-50" data-validate="Enter password">
+                    <input class="input100" type="password" name="pass">
+                    <span class="focus-input100" data-placeholder="Password"></span>
+                </div>
+
+                <div class="container-login100-form-btn">
+                    <button class="login100-form-btn">
+                        Login
+                    </button>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<div id="dropDownSelect1"></div>
+
+<script src="js/main.js"></script>
+</body>
+</html>
