--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -21,7 +21,7 @@
                 <div id='dropdown-menu' class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item text-secondary" href="/slogin">Student Login</a><hr>
                         <a class="dropdown-item text-secondary" href="/tlogin">Teacher login</a><hr>
-                        <a class="dropdown-item text-secondary" href="#">Parent Login</a>
+                        <a class="dropdown-item text-secondary" href="plogin">Parent Login</a>
 
             </li>
             <li class="nav-item">
