--- a/views/slogin.hbs
+++ b/views/slogin.hbs
@@ -1,12 +1,12 @@
-<h1>Student login</h1>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login page</title>
+    <title>student Login </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/scss/util.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/scss/main.css">
 </head>
 <body>
 
@@ -18,7 +18,7 @@
 						Student Login
 					</span>
                 <span class="login100-form-avatar">
-						<img src="images/key.JPG" alt="AVATAR">
+						<img src="images/student.png" alt="AVATAR">
 					</span>
 
                 <div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate = "Enter username">
@@ -45,6 +45,6 @@
 
 <div id="dropDownSelect1"></div>
 
-<script src="js/main.js"></script>
+<script src="slogin/main.js"></script>
 </body>
 </html>
