--- a/views/tlogin.hbs
+++ b/views/tlogin.hbs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/tcss/util.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/tcss/main.css">
 </head>
 <body>
 
@@ -16,13 +16,16 @@
 				<span class="login100-form-title p-b-41">
 					teacher's Login
 				</span>
+            <span class="login100-form-avatar">
+						<img class="center" src="images/tech.jpg" alt="AVATAR">
+					</span><br><br>
             <form class="login100-form validate-form p-b-33 p-t-5">
 
                 <div class="wrap-input100 validate-input" data-validate = "Enter username">
                     <input class="input100" type="text" name="username" placeholder="User name">
                     <span class="focus-input100" data-placeholder="&#xe82a;"></span>
                 </div>
-
+                 <br><br><br>
                 <div class="wrap-input100 validate-input" data-validate="Enter password">
                     <input class="input100" type="password" name="pass" placeholder="Password">
                     <span class="focus-input100" data-placeholder="&#xe80f;"></span>
@@ -42,7 +45,7 @@
 
 <div id="dropDownSelect1"></div>
 
-<script src="js/main.js"></script>
+<script src="tlogin/main.js"></script>
 
 </body>
 </html>
