--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,12 @@
+
 <div class="main">
 
     <img class="bgimg" src="images/background.jpg" >
     <div class="centered ">Campus Diary</div>
+
+    <img class="btimg" src="images/but.jpg">
+    <div class="centereds">PPTM ARTS & SCIENCE COLLEGE</div>
+    <div class="nice">cherur(po) vengara Malappuram </div>
+    <div class="nices">pin 676304</div>
+    <div class="nicess">phone : 0494-2453090 </div>
 </div>
