--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,5 @@
+
+
 .center{
     text-align: center;
 }
@@ -17,5 +19,42 @@
 }
 .centered{
     font-size: 60px;
+    color: whitesmoke;
+}
+.btimg {
+    width: 100%;
+    height: 164px;
+}
+.centereds {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    color: whitesmoke;
+}
+.nice{
+    position: absolute;
+    top: 89%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: whitesmoke;
+}
+.nices{
+    position: absolute;
+    top: 92%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+    color: whitesmoke;
+}
+
+.nicess{
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
     color: whitesmoke;
 }
