--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,7 +7,7 @@
     <div class="cotainer-fluid collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
         <ul class="navbar-nav  ">
             <li class="nav-item">
-                <a class="nav-link text-white" href="views/index.hbs">HOME </a>
+                <a class="nav-link text-white" href="/">HOME </a>
             </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
             <li class="nav-item dropdown mr-5">
@@ -25,7 +25,7 @@
 
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="cambus diary/views/about.hbs">ABOUT </a>
+                <a class="nav-link text-white" href="about.hbs">ABOUT </a>
             </li>
         </ul>
     </div>
