--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -25,7 +25,7 @@
 
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="about.hbs">ABOUT </a>
+                <a class="nav-link text-white" href="about">ABOUT </a>
             </li>
         </ul>
     </div>
