--- a/views/dashboard/index.hbs
+++ b/views/dashboard/index.hbs
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Student-Dashbord</title>
-    <link rel="stylesheet" type="text/css" href="Dashstyle.css">
-    <link rel="stylesheet" type="text/css" href="bootstrap431/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
-    <script src="bootstrap431/js/bootstrap.min.js"></script>
-    <script src="bootstrap431/js/jquery-1.11.1.min.js"></script>
-</head>
-<body>
 
 <div class="continer containermain">
     <div class="d-flex justify-content-center h-100">
@@ -29,16 +16,16 @@
                                     <div class="profile-sidebar">
                                         <!-- SIDEBAR USERPIC -->
                                         <div class="profile-userpic">
-                                            <img src="user.jpg" class="img-responsive" alt="">
+                                            <img src="../../images/user.jpg" class="img-responsive" alt="">
                                         </div>
                                         <!-- END SIDEBAR USERPIC -->
                                         <!-- SIDEBAR USER TITLE -->
                                         <div class="profile-usertitle">
                                             <div class="profile-usertitle-name">
-                                                Marcus Doe
+                                                Roshan cp
                                             </div>
                                             <div class="profile-usertitle-class">
-                                                SEM 5 BCA
+                                                5<sup>th</sup> SEM BCA
                                             </div>
                                         </div>
                                         <!-- END SIDEBAR USER TITLE -->
@@ -52,120 +39,138 @@
 
 
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-aqua"><i class="far fa-clipboard"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box aqua">
+					            			<span class="info-box-icon bg-aqua"><i class="far fa-clipboard"></i>
 
-				            			</span>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">Attendance</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 13%; text-align: center;">Attendance</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-red"><i class="fas fa-rupee-sign"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box red">
+					            			<span class="info-box-icon bg-red"><i class="fas fa-rupee-sign"></i>
 
-				            			</span>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">FEEs</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 13%; text-align: center;">FEEs</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-green"><i class="fas fa-poll"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box green">
+					            			<span class="info-box-icon bg-green"><i class="fas fa-poll"></i>
 
-				            			</span>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">Exam Result</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 13%; text-align: center;">Exam Result</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-yellow"><i class="fas fa-book-open"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box yellow">
+					            			<span class="info-box-icon bg-yellow"><i class="fas fa-book-open"></i>
 
-				            			</span>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">Syllabus</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 13%; text-align: center;">Syllabus</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
                             </div>
                             <div class="row">
 
 
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-aqua"><i class="fas fa-pencil-ruler"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box aqua">
+					            			<span class="info-box-icon bg-aqua"><i class="fas fa-pencil-ruler"></i>
 
-				            			</span>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">Study Materials</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 9%; text-align: center;">Study<br>Materials</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-red"><i class="fas fa-rss"></i>
-				            			</span>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box red">
+					            			<span class="info-box-icon bg-red"><i class="fas fa-rss"></i>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">News &amp; Events</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 9%; text-align: center;">News &amp;<br>Events</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-green"><i class="fas fa-graduation-cap"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box green">
+					            			<span class="info-box-icon bg-green"><i class="fas fa-graduation-cap"></i>
 
-				            			</span>
+					            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">Department</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 13%; text-align: center;">Directory</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
-                                    <!-- /.info-box -->
+                                        <!-- /.info-box -->
+                                    </a>
                                 </div>
+
                                 <div class="col-md-3 col-sm-6 col-xs-12" style="padding-top: 10px;">
-                                    <div class="info-box">
-				            			<span class="info-box-icon bg-yellow"><i class="fas fa-university"></i>
+                                    <a href="#" style="color: black; text-decoration: none;">
+                                        <div class="info-box yellow">
+						            			<span class="info-box-icon bg-yellow"><i class="fas fa-university"></i>
 
-				            			</span>
+						            			</span>
 
-                                        <div class="info-box-content"><br>
-                                            <span class="info-box-text">About College</span>
+                                            <div class="info-box-content infobox-center">
+                                                <span class="info-box-text" style="padding-top: 9%; text-align: center;">About<br>College</span>
 
+                                            </div>
+                                            <!-- /.info-box-content -->
                                         </div>
-                                        <!-- /.info-box-content -->
-                                    </div>
+                                    </a>
                                     <!-- /.info-box -->
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -174,5 +179,3 @@
         </div>
     </div>
 </div>
-</body>
-</html>
