--- a/views/slogin.hbs
+++ b/views/slogin.hbs
@@ -13,7 +13,7 @@
 <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100 p-t-85 p-b-20">
-            <form class="login100-form validate-form" action="dashboard/index">
+            <form class="login100-form validate-form" action="/dashboard">
 					<span class="login100-form-title p-b-70">
 						Student Login
 					</span>
