--- a/public/stylesheets/dashboard/Dashstyle.css
+++ b/public/stylesheets/dashboard/Dashstyle.css
@@ -1,6 +1,6 @@
 .main{
-    height: 100%;
-    background-color: blue;
+	height: 100%;
+	background-color: blue;
 }
 
 .container-center {
@@ -12,215 +12,231 @@
 
 .profilecol{
 
-    background-color: #333;
+ background-color: #333;
 }
 
 .dash-nav{
 
-    background-color: #dedede;
+background-color: #dedede;
 }
 
 .profile {
-    margin: 20px 0;
+  margin: 20px 0;
 }
 
 /* Profile sidebar */
 .profile-sidebar {
-    padding: 20px 0 10px 0;
-    background: #4d4c4c;
+  padding: 20px 0 10px 0;
+  background: #4d4c4c;
 }
 
 .profile-userpic img {
-    float: none;
-    margin: 0 30%;
-    width: 50%;
-    height: 50%;
-    -webkit-border-radius: 50% !important;
-    -moz-border-radius: 50% !important;
-    border-radius: 50% !important;
+  float: none;
+  margin: 0 30%;
+  width: 50%;
+  height: 50%;
+  -webkit-border-radius: 50% !important;
+  -moz-border-radius: 50% !important;
+  border-radius: 50% !important;
 }
 
 .profile-usertitle {
-    text-align: center;
-    margin-top: 20px;
+  text-align: center;
+  margin-top: 20px;
 }
 
 .profile-usertitle-name {
-    color: #5b9bd1;
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 7px;
+  color: #5b9bd1;
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 7px;
 }
 
 .profile-usertitle-class {
-    text-transform: uppercase;
-    color: #5a7391;
-    font-size: 12px;
-    font-weight: 600;
-    margin-bottom: 15px;
+  text-transform: uppercase;
+  color: #5a7391;
+  font-size: 12px;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 
 .profile-userbuttons {
-    text-align: center;
-    margin-top: 10px;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .profile-userbuttons .btn {
-    text-transform: uppercase;
-    font-size: 11px;
-    font-weight: 600;
-    padding: 6px 15px;
-    margin-right: 5px;
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  padding: 6px 15px;
+  margin-right: 5px;
 }
 
 .profile-userbuttons .btn:last-child {
-    margin-right: 0px;
+  margin-right: 0px;
 }
-
+    
 .profile-usermenu {
-    margin-top: 30px;
+  margin-top: 30px;
 }
 
 .profile-usermenu ul li {
-    border-bottom: 1px solid #f0f4f7;
+  border-bottom: 1px solid #f0f4f7;
 }
 
 .profile-usermenu ul li:last-child {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .profile-usermenu ul li a {
-    color: #93a3b5;
-    font-size: 14px;
-    font-weight: 400;
+  color: #93a3b5;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .profile-usermenu ul li a i {
-    margin-right: 8px;
-    font-size: 14px;
+  margin-right: 8px;
+  font-size: 14px;
 }
 
 .profile-usermenu ul li a:hover {
-    background-color: #fafcfd;
-    color: #5b9bd1;
+  background-color: #fafcfd;
+  color: #5b9bd1;
 }
 
 .profile-usermenu ul li.active {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .profile-usermenu ul li.active a {
-    color: #5b9bd1;
-    background-color: #f6f9fb;
-    border-left: 2px solid #5b9bd1;
-    margin-left: -2px;
+  color: #5b9bd1;
+  background-color: #f6f9fb;
+  border-left: 2px solid #5b9bd1;
+  margin-left: -2px;
 }
 
 /* Profile Content */
 .profile-content {
-    padding: 20px;
-    background: #fff;
-    min-height: 460px;
+  padding: 20px;
+  background: #fff;
+  min-height: 460px;
 }
 
 
 /* infobox*/
 .info-box {
-    display: block;
-    min-height: 90px;
-    background: #fff;
-    width: 100%;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    margin-bottom: 15px;
+  display: block;
+  min-height: 90px;
+  background: #fff;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  margin-bottom: 15px;
 }
 .info-box small {
-    font-size: 14px;
+  font-size: 14px;
 }
 .info-box .progress {
-    background: rgba(0, 0, 0, 0.2);
-    margin: 5px -10px 5px -10px;
-    height: 2px;
+  background: rgba(0, 0, 0, 0.2);
+  margin: 5px -10px 5px -10px;
+  height: 2px;
 }
 .info-box .progress,
 .info-box .progress .progress-bar {
-    border-radius: 0;
+  border-radius: 0;
 }
 .info-box .progress .progress-bar {
-    background: #fff;
+  background: #fff;
 }
 .info-box-icon {
-    border-top-left-radius: 2px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 2px;
-    display: block;
-    float: left;
-    height: 90px;
-    width: 90px;
-    text-align: center;
-    font-size: 45px;
-    line-height: 90px;
-    background: rgba(0, 0, 0, 0.2);
+  border-top-left-radius: 2px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 2px;
+  display: block;
+  float: left;
+  height: 90px;
+  width: 90px;
+  text-align: center;
+  font-size: 45px;
+  line-height: 90px;
+  background: rgba(0, 0, 0, 0.2);
 }
 .info-box-icon > img {
-    max-width: 100%;
+  max-width: 100%;
 }
 .info-box-content {
-    padding: 5px 10px;
-    margin-left: 90px;
+  padding: 5px 10px;
+  margin-left: 90px;
 }
 .info-box-number {
-    display: block;
-    font-weight: bold;
-    font-size: 18px;
+  display: block;
+  font-weight: bold;
+  font-size: 18px;
 }
 .progress-description,
 .info-box-text {
-    display: block;
-    font-size: 14px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  display: block;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .info-box-text {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 .info-box-more {
-    display: block;
+  display: block;
 }
 .progress-description {
-    margin: 0;
+  margin: 0;
 }
 
 .bg-aqua{
-    background-color: #00c0ef;
+	background-color: #00c0ef;
 }
 .bg-red{
-    background-color: #dd4b39;
+	background-color: #dd4b39;
 }
 .bg-green{
-    background-color: #00a65a;
+	background-color: #00a65a;
 }
 .bg-yellow{
-    background-color: #f39c12;
+	background-color: #f39c12;
 }
 
 html,body{
-    background-image: url('background.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100%;
+background-image: url('../../images/bgdashboard.jpg');
+background-size: cover;
+background-repeat: no-repeat;
+height: 100%;
 }
 .containermain{
-    height: 100%;
-    align-content: center;
+padding-top: 10%;
+align-content: center;
 }
 
 .cardmain{
-    height: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 90%;
-    background-color: rgba(0,0,0,0.5) !important;
+height: auto;
+margin-top: auto;
+margin-bottom: auto;
+width: 90%;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+a:hover .yellow{
+	background-color: #f39c12;
+}
+
+a:hover .green{
+	background-color: #00a65a;
+}
+
+a:hover .red{
+	background-color: #dd4b39;
+}
+
+a:hover .aqua{
+	background-color: #00c0ef;
 }
