--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,122 +1,93 @@
-<!DOCTYPE HTML>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
+    <title>about</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Noah Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Facebook and Twitter integration -->
-    <meta property="og:title" content=""/>
-    <meta property="og:image" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
-    <meta name="twitter:title" content="" />
-    <meta name="twitter:image" content="" />
-    <meta name="twitter:url" content="" />
-    <meta name="twitter:card" content="" />
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,700|Hepta+Slab:400,700&display=swap" rel="stylesheet">
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="css/animate.css">
-    <!-- Icomoon Icon Fonts-->
-    <link rel="stylesheet" href="css/icomoon.css">
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <!-- Owl Carousel -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- Magnific Popup -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="css/aos.css">
 
-    <link rel="stylesheet" href="stylesheets/about/style.css">
-
-
-    <!-- Modernizr JS -->
-    <script src="javascripts/about/modernizr-2.6.2.min.js"></script>
-    <!-- FOR IE9 below -->
-    <!--[if lt IE 9]>
-    <script src="javascripts/about/respond.min.js"></script>
-    <![endif]-->
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body>
+
+<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+
+<div class="site-wrap" id="home-section">
 
 
 
-<div id="colorlib-page">
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="colorlib-navbar-brand">
-                        <a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
-                    </div>
-                    <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-                </div>
-            </div>
-        </div>
-    </header>
-    <div id="colorlib-about">
-        <div class="container">
-            <div class="row text-center">
-                <h2 class="bold">About</h2>
-            </div>
-            <div class="row row-padded-bottom">
-                <div class="col-md-5 animate-box">
-                    <img class="img-responsive about-img" src="images/lab.jpg" alt="html5 bootstrap template by colorlib.com">
-                </div>
-                <div class="col-md-6 col-md-push-1 animate-box">
-                    <div class="about-desc">
-                        <h2><span>PPTM</span><span>arts & science college</span></h2>
-                        <div class="desc">
-                            <div class="rotate">
-                                <h2 class="heading">About</h2>
-                            </div>
-                            <p>PPTM arts and science college is a premier educational institution run by PPTM Yatheem Khana Committee cherur, established in the year 2013.conducted under unaided/self finacing schemes . the Yatheem Khana Committee
-                                is well established in the field of education </p>
-                            <p class="colorlib-social-icons">
-                                <a href="#"><i class="icon-facebook4"></i></a>
-                                <a href="#"><i class="icon-twitter3"></i></a>
-                                <a href="#"><i class="icon-googleplus"></i></a>
-                                <a href="#"><i class="icon-email"></i></a>
-                            </p>
-                        </div>
+
+
+    <div class="ftco-blocks-cover-1">
+        <div class="site-section-cover overlay" style="background-image: url('images/hero_1.jpg')">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-7"><br>
+                        <h1 class="mb-3 text-primary">About Us</h1>
+                        <h3> <p>PPTM  arts and science college </p></h3>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </footer>
 
-</div>
+    <div class="site-section bg-black about-me">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6 mb-5 mb-md-0">
+                    <img src="images/background.jpg" alt="Image" class="img-fluid">
+                </div>
+                <div class="col-md-5 ml-auto">
+                    <h2 class="text-white mb-5">About college</h2>
+                    <blockquote class="quote-29281">
+                        <h2><p>PPTM arts and science college  </p></h2>
+                    </blockquote>
+                   <h5><p>PPTM Arts and science college is a premier educational institution run by PPTM Yatheemkhana committee cherur, established in the year 2013, conducting under gratuate
+                    courses under unaided schemes. The yatheem Khana Committee is already well established in the field of education with several instituation from
+                        nursary school to higher secondary</p>
+                    <p>The college is situvated in the historical place Cherur ,which is an easily reachable location on the sides of vengara kondotty road 2km
+                    from vengara 15km.from district head quarter at malappuram 17km from calicut university campus 14km from parappanagadi railwaystation. the college is
+                        affiliated to university of calicut with recognition of gov.t of kerala and offers five under graduate courses under self finance scheme</p></h5>
 
-<!-- jQuery -->
-<script src="javascripts/about/jquery.min.js"></script>
-<!-- jQuery Easing -->
-<script src="javascripts/about//jquery.easing.1.3.js"></script>
-<!-- Bootstrap -->
-<script src="javascripts/about/bootstrap.min.js"></script>
-<!-- Waypoints -->
-<script src="javascripts/about/jquery.waypoints.min.js"></script>
-<!-- Owl Carousel -->
-<script src="javascripts/about/owl.carousel.min.js"></script>
-<!-- Magnific Popup -->
-<script src="javascripts/about/jquery.magnific-popup.min.js"></script>
-<script src="javascripts/about/magnific-popup-options.js"></script>
 
-<!-- Main JS (Do not remove) -->
-<script src="javascripts/about/main.js"></script>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="about/jquery-3.3.1.min.js"></script>
+    <script src="about/jquery-migrate-3.0.0.js"></script>
+    <script src="about/popper.min.js"></script>
+    <script src="about/bootstrap.min.js"></script>
+    <script src="about/owl.carousel.min.js"></script>
+    <script src="about/jquery.sticky.js"></script>
+    <script src="about/jquery.waypoints.min.js"></script>
+    <script src="about/jquery.animateNumber.min.js"></script>
+    <script src="about/jquery.fancybox.min.js"></script>
+    <script src="about/jquery.stellar.min.js"></script>
+    <script src="about/jquery.easing.1.3.js"></script>
+    <script src="about/bootstrap-datepicker.min.js"></script>
+    <script src="about/isotope.pkgd.min.js"></script>
+    <script src="about/aos.js"></script>
+
+    <script src="about/main.js"></script>
 
 </body>
-</html>
 
+</html>
